<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="icar.a5i4s.com.cashierb.FlashCashier">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:id="@+id/topPanel">
        <TextView
            android:id="@+id/flash_cashier_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center_vertical|left"
            android:textSize="@dimen/title"
            android:layout_marginLeft="@dimen/least"
            android:text="@string/flash_cashier_title"/>

        <TextView
            android:id="@+id/flash_cash_total"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/money"
            android:textSize="@dimen/huge"
            android:layout_marginRight="@dimen/vice"
            android:gravity="center_vertical|right"
            android:text="@string/flash_cash_total"/>

        <TextView
            android:id="@+id/flash_cash_calc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:textSize="@dimen/vice"
            android:layout_marginRight="@dimen/vice"
            android:textColor="@color/money_vice"
            android:gravity="center_vertical|right"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/topPanel"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:id="@+id/panel_num7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                style="@style/column"
                android:text="@string/panel_num7"
                >
            </Button>

            <Button
                android:id="@+id/panel_num4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                style="@style/column"
                android:text="@string/panel_num4"
                >
            </Button>

            <Button
                android:id="@+id/panel_num1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                style="@style/column"
                android:text="@string/panel_num1"
                >
            </Button>

            <Button
                android:id="@+id/panel_num0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                style="@style/column"
                android:text="@string/panel_num0"
                >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
                <Button
                    android:id="@+id/panel_num8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    style="@style/column"
                    android:text="@string/panel_num8"
                    >
                </Button>

                <Button
                    android:id="@+id/panel_num5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    style="@style/column"
                    android:text="@string/panel_num5"
                    >
                </Button>

                <Button
                    android:id="@+id/panel_num2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    style="@style/column"
                    android:text="@string/panel_num2"
                    >
                </Button>

                <Button
                    android:id="@+id/panel_dot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    style="@style/column"
                    android:text="@string/panel_dot"
                    >
                </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
                <Button
                    android:id="@+id/panel_num9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    style="@style/column"
                    android:text="@string/panel_num9"
                    >
                </Button>

                <Button
                    android:id="@+id/panel_num6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    style="@style/column"
                    android:text="@string/panel_num6"
                    >
                </Button>

                <Button
                    android:id="@+id/panel_num3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    style="@style/column"
                    android:text="@string/panel_num3"
                    >
                </Button>

                <Button
                    android:id="@+id/panel_plus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    style="@style/column"
                    android:text="@string/panel_plus"
                    >
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="4"
                android:layout_weight="1">
                <Button
                    android:id="@+id/panel_backspace"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1.5"
                    style="@style/column"
                    android:text="@string/panel_backspace"
                    >
                </Button>

                <Button
                    android:id="@+id/panel_empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1.5"
                    style="@style/column"
                    android:text="@string/panel_empty"
                    >
                </Button>

                <Button
                    android:id="@+id/panel_pay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    style="@style/column_red"
                    android:text="@string/panel_pay"
                    >
                </Button>
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>
