<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/gray"
    android:paddingBottom="10dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="30dp"
    tools:context="icar.a5i4s.com.cashierb.LoginActivity">


    <ImageView
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:src="@drawable/bo_logo"
        android:id="@+id/bo_logo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/version"
        android:text=""
        android:textColor="@color/array_1"
        android:textSize="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icar_logo"/>

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColorHint="@color/gray_text"
                    android:paddingLeft="40dp"
                    android:hint="@string/prompt_email"
                    android:inputType="text"
                    android:background="@drawable/edit_text_bg"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/icon_account"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="40dp"
                    android:textColorHint="@color/gray_text"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_bg"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/icon_password"/>
            </RelativeLayout>

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:background="#1ca6ea"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:text="@string/action_sign_in"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
